# benchkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  noxfile.py  pyproject.toml  t.py
docs/: workflow.md
examples/: simple.py
skills/benchkit/: SKILL.md
skills/benchkit-plot/: SKILL.md
src/benchkit/: __init__.py  analysis.py  artifacts.py  benchmark.py  cache.py  caching.py  cli.py  config.py  logging.py  loops.py  models.py  plot.py  registry.py  result_storage.py  results.py  runner.py  runtime.py  serialize.py  skill.md  state.py  storage.py  store.py  sweep.py  timeout.py
src/benchkit/plot/: __init__.py  _bar.py  _line.py  config.py  pplot.py
src/benchkit/skills/: benchkit  benchkit-plot
test/: test_benchkit.py  test_study.py
