[build-system]
requires = [
    "hatchling>=1.27.0",
    "hatch-vcs>=0.4.0"
]
build-backend = "hatchling.build"

[project]
name = "benchkit"
description = "Utility kit for benchmarking stuff."
readme = "README.md"
authors = [
    { name = "Nathaniel Tornow", email = "nathaniel.tornow@tum.de" },
]
keywords = ["benchmarking", "performance", "testing"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "gitpython>=3.1.45",
    "matplotlib>=3.9.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "typer>=0.16.0",
]
dynamic = ["version"]


[project.scripts]
benchkit = "benchkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchkit"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/benchkit/_version.py"


[tool.check-sdist]
git-only = [
    "docs/*",
    "test/*",
]


[tool.pytest.ini_options]
minversion = "7.2"
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    # Qiskit 1.3 deprecations
    'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
    'ignore:.*``qiskit.circuit.instruction.Instruction.*`` is deprecated as of qiskit 1.3.*:DeprecationWarning:',
    'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
]
log_cli_level = "info"
testpaths = ["test"]


[tool.coverage]
run.source = ["benchkit"]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
]


[tool.mypy]
files = ["src/benchkit", "test", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["qiskit.*", "matplotlib.*", "git.*", "pandas.*", "rich.*", "typer.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
preview = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90", # <...> too complex
    "COM812", # Conflicts with formatter
    "CPY001", # Missing copyright notice at top of file
    "ISC001", # Conflicts with formatter
    "PLR09", # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "S101", # Use of assert detected
    "S404", # `subprocess` module is possibly insecure
    "TID252",   # Prefer absolute imports over relative imports from parent modules
    "TD003",  # Missing issue link for this TODO
    "FIX002" # Line contains TODO, consider resolving the issue
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Callable".msg = "Use collections.abc.Callable instead."
"typing.Iterator".msg = "Use collections.abc.Iterator instead."
"typing.Mapping".msg = "Use collections.abc.Mapping instead."
"typing.Sequence".msg = "Use collections.abc.Sequence instead."
"typing.Set".msg = "Use collections.abc.Set instead."

[tool.ruff.lint.per-file-ignores]
"test/**" = ["T20", "INP001", "SLF001"]
"docs/**" = ["T20", "INP001"]
"benchmarks/**" = ["ARG002"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "DOC202", "PYI011", "PYI021"]
"*.ipynb" = [
    "D", # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]
"examples/**" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$", # ignore line
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
]


[tool.repo-review]
ignore = ["GH200"]


[tool.uv]
required-version = ">=0.5.20"
reinstall-package = ["benchkit"]

[dependency-groups]
build = [
    "hatchling>=1.27.0",
    "hatch-vcs>=0.4.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-nb>=1.1.2",
    "sphinx-autoapi>=3.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-svg2pdfconverter>=1.2.3",
    "sphinxext-opengraph>=0.9.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6",
]
dev = [
    { include-group = "build" },
    { include-group = "docs" },
    { include-group = "test" },
]
